--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -177,7 +177,7 @@
     <main class="govuk-main-wrapper" id="main-content" role="main">
         {% block content %}{% endblock %}
     </main>
-
+</div>
 
 {% block footer %}
     {%- from "govuk/components/footer/macro.njk" import govukFooter -%}
