Tidy: Stop redirect

--- a/server/views/outcomes/resultedCases.njk
+++ b/server/views/outcomes/resultedCases.njk
@@ -73,7 +73,7 @@
   {
     title: 'Cases to result',
     a11yTitle: 'View cases to result',
-    link: '/' + params.courtCode + '/outcomes/',
+    link: '/' + params.courtCode + '/outcomes',
     count: params.casesToResultCount
   },
   {
