--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -92,7 +92,7 @@
   {
     title: 'Cases to result',
     a11yTitle: 'View cases to result',
-    link: '/' + params.courtCode + '/outcomes/',
+    link: '/' + params.courtCode + '/outcomes',
     current: true,
     count: params.casesToResultCount
   },
