Disable action buttons on click

--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -203,7 +203,7 @@
                         </tbody>
                     </table>
                     {% if previousOrders | length > limitPreviousOrders %}
-                        <button type="submit" class="govuk-button govuk-button--secondary">Show all previous orders
+                        <button type="submit" class="govuk-button action-button govuk-button--secondary">Show all previous orders
                         </button>
                     {% endif %}
                 </form>
