--- a/server/views/components/file-uploader/template.njk
+++ b/server/views/components/file-uploader/template.njk
@@ -45,7 +45,7 @@
       </ul>
     </fieldset>
     <div>
-      <input type="submit" class="govuk-button" value="Upload files" />
+      <input type="submit" class="govuk-button action-button" value="Upload files" />
     </div>
   </form>
 </div>
