--- a/server/views/components/search/template.njk
+++ b/server/views/components/search/template.njk
@@ -27,7 +27,7 @@
             <div class="search-group">
                 <label class="govuk-label govuk-!-margin-bottom-3" for="search-term">Enter the CRN or full name of the person you are searching for.</label>
                 <input class="govuk-input govuk-!-width-one-third" id="search-term" name="term" type="text" maxlength="650" value="{{ params.term }}">
-                <button class="govuk-button govuk-!-margin-bottom-1 govuk-!-margin-left-3" data-module="govuk-button" type="submit">Search</button>
+                <button class="govuk-button action-button govuk-!-margin-bottom-1 govuk-!-margin-left-3" data-module="govuk-button" type="submit">Search</button>
             </div>
         </form>
     </div>
