--- a/server/views/court-case-progress-hearing-outcome-edit-modal.njk
+++ b/server/views/court-case-progress-hearing-outcome-edit-modal.njk
@@ -41,7 +41,7 @@
                         <li>contact them to tell them the outcome type has changed.</li>
                     </ul>
                     <button type="submit" id="update-outcome"
-                            class="govuk-button govuk-!-margin-bottom-0"
+                            class="govuk-button action-button govuk-!-margin-bottom-0"
                             data-module="govuk-button">Update outcome
                     </button>
                 </div>
