--- a/server/views/edit-courts.njk
+++ b/server/views/edit-courts.njk
@@ -93,7 +93,7 @@
           errorMessage: 'You must add a court'
         }) }}
 
-        <button type="submit" class="govuk-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0">
+        <button type="submit" class="govuk-button action-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0">
           Add
         </button>
 
