--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -216,7 +216,7 @@
       text: detailsText | safe
     }) }}
 
-    <button type="submit" class="govuk-button">Confirm record</button>
+    <button type="submit" class="govuk-button action-button">Confirm record</button>
 
     <p class="govuk-body"><a href="{{ backUrl }}" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
 
