--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -102,7 +102,7 @@
             value: session.crn
           }) }}
 
-          <button type="submit" class="govuk-button">Find record</button>
+          <button type="submit" class="govuk-button action-button">Find record</button>
 
           <p class="govuk-body"><a href="{{ useBackLink }}" class="govuk-link govuk-link--no-visited-state">Cancel</a>
           </p>
@@ -138,7 +138,7 @@
           </dl>
 
           <input type="hidden" id="crn" name="crn" value="{{ params.crn }}"/>
-          <button type="submit" class="govuk-button">Link record to defendant</button>
+          <button type="submit" class="govuk-button action-button">Link record to defendant</button>
 
           <p class="govuk-body">If this isn't the record you're looking for, you can
             <a href="{{ useBackLink }}"
