--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -158,7 +158,7 @@
             text: "Assign to me",
             name: "action",
             value: "assign",
-            classes: "common_checker_toggle_action govuk-button--secondary"
+            classes: "common_checker_toggle_action govuk-button--secondary action-button"
           }
         ]
       }) }}
