--- a/server/views/set-notification.njk
+++ b/server/views/set-notification.njk
@@ -79,7 +79,7 @@
         ]
       }) }}
 
-      <button type="submit" class="govuk-button" data-cy="notification-submit">Set notification html</button>
+      <button type="submit" class="govuk-button action-button" data-cy="notification-submit">Set notification html</button>
 
     </div>
   </div>
