--- a/server/views/components/modal-box/template.njk
+++ b/server/views/components/modal-box/template.njk
@@ -9,7 +9,7 @@
                 </strong>
             </div>
             <p class="govuk-body-s govuk-!-margin-bottom-9">Save your notes before adding a new one.</p>
-            <button type="button" id="close-btn" class="govuk-button govuk-!-padding-right-3" data-module="govuk-button">Go back</button>
+            <button type="button" id="close-btn" class="govuk-button action-button govuk-!-padding-right-3" data-module="govuk-button">Go back</button>
         </div>
     </div>
 </div>
