--- a/server/views/confirm-delete-hearing-note.njk
+++ b/server/views/confirm-delete-hearing-note.njk
@@ -36,7 +36,7 @@
             <div class="govuk-grid-column-one-third">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
-                        <button class="govuk-button govuk-button--warning" data-module="govuk-button" type="submit">
+                        <button class="govuk-button action-button govuk-button--warning" data-module="govuk-button" type="submit">
                             Delete note
                         </button>
                     </div>
