--- a/server/views/court-case-progress-reassign-resulted-modal.njk
+++ b/server/views/court-case-progress-reassign-resulted-modal.njk
@@ -16,7 +16,7 @@
                 <input type="hidden" name="targetDefendantId" value=""/>
                 <input type="hidden" name="targetCourtCode" value=""/>
                 <div class="modal-footer govuk-button-group">
-                    <button class="govuk-button" type="submit" data-module="govuk-button">Assign to me</button>
+                    <button class="govuk-button action-button" type="submit" data-module="govuk-button">Assign to me</button>
                     <a class="govuk-link govuk-!-margin-right-7 assign-outcome-view" href="#">Open as read only</a>
                 </div>
             </form>
