--- a/server/views/match-unlink.njk
+++ b/server/views/match-unlink.njk
@@ -45,7 +45,7 @@
                 </div>
             </dl>
 
-            <button class="govuk-button">Unlink record from defendant</button>
+            <button class="govuk-button action-button">Unlink record from defendant</button>
             <p class="govuk-body"><a href="{{ backLink }}" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
         </form>
 
