--- a/server/views/court-case-progress-hearing-outcome-modal.njk
+++ b/server/views/court-case-progress-hearing-outcome-modal.njk
@@ -24,7 +24,7 @@
                         }) }}
 
                     <button type="submit" id="send-outcome-to-admin"
-                            class="govuk-button action-button"
+                            class="govuk-button"
                             data-module="govuk-button">Send to admin
                     </button>
                 </div>
