PIC-3137: Add note label becomes Enter a note

--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -79,7 +79,7 @@
                         <details {{ 'open' if draftNote | length }} class="govuk-details govuk-!-margin-bottom-0"
                                                                     data-module="govuk-details">
                             <summary class="govuk-details__summary govuk-!-margin-bottom-0 govuk-!-margin-top-2">
-                                <span class="govuk-details__summary-text">Add a hearing note</span>
+                                <span class="govuk-details__summary-text">Expand to add a hearing note</span>
                             </summary>
                             <div class="govuk-details__text govuk-!-padding-bottom-0">
                                 <input type="hidden" name="hearingId" value="{{ params.hearing.hearingId }}"/>
