Disable action buttons on click (#968)
* Disable action buttons on click

* Add warning if cant attach event listener, remove action button class from hearing outcome modal

* Fixed mass assign not working

--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -74,11 +74,11 @@
 
                 <input type="hidden" name="caseId" value="{{ data.caseId }}"/>
                 {% if data.hearings | length > limitPreviousHearings %}
-                    <button type="submit" id="showPreviousHearings" class="govuk-button govuk-button--secondary">Show all previous hearings
+                    <button type="submit" id="showPreviousHearings" class="govuk-button action-button govuk-button--secondary">Show all previous hearings
                     </button>
                 {% endif %}
                 {% if session.showPreviousHearings === data.caseId %}
-                    <button type="submit" id="showHideOlderHearings" class="govuk-button govuk-button--secondary">Hide older hearings
+                    <button type="submit" id="showHideOlderHearings" class="govuk-button action-button govuk-button--secondary">Hide older hearings
                     </button>
                 {% endif %}
             </form>
