--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -50,6 +50,7 @@
                 })
             </script>
         {% endif %}
+        <script type="text/javascript" src="/javascripts/button-{{ appVersion }}.min.js"></script>
     {% endblock %}
 </head>
 <body class="govuk-template__body govuk-frontend-supported">
