--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -90,7 +90,7 @@
                                         aria-describedby="note-box">{{ draftNote }}</textarea>
                                 <div class="govuk-button-group">
                                     <button class="govuk-button action-button case-comments-save-button" type="submit" data-module="govuk-button">
-                                        Save<span class="govuk-visually-hidden"> note</span>
+                                        Save<span class="govuk-visually-hidden"> note for {{ params.hearing.hearingTypeLabel }}</span>
                                     </button>
                                     <a class="govuk-link note-draft-cancel-link"
                                     href="summary/notes/{{ params.hearing.hearingId }}/cancel-draft-note">Cancel<span class="govuk-visually-hidden"> saving note</span></a>
