PIC-4093: Code change to display matching defendant records in descending order.

--- a/public/src/stylesheets/app/all.scss
+++ b/public/src/stylesheets/app/all.scss
@@ -21,3 +21,4 @@
 @import "splide_carousel";
 @import "file-uploader";
 @import "workflow-tasks-prep-status-selector";
+@import "inset-sticky-block";
