--- a/public/src/stylesheets/app/_overrides.scss
+++ b/public/src/stylesheets/app/_overrides.scss
@@ -27,6 +27,11 @@
 
 .pac-\!-grid-column-45 {
   width: 45%;
+  padding: 10px 0;
+  position: sticky;
+  top: 20px;
+  overflow: auto;
+  position: sticky;
 }
 
 .pac-\!-grid-column--max-700 {
