PIC-4093: Changes based on review build(deps-dev): bump webpack from 5.89.0 to 5.94.0 (#980)
Bumps [webpack](https://github.com/webpack/webpack) from 5.89.0 to 5.94.0.
- [Release notes](https://github.com/webpack/webpack/releases)
- [Commits](https://github.com/webpack/webpack/compare/v5.89.0...v5.94.0)

---
updated-dependencies:
- dependency-name: webpack
  dependency-type: direct:development
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

PIC-4093: Changes based on review

PIC-4093: Code change to display matching defendant records in descending order.

--- a/public/src/stylesheets/app/_overrides.scss
+++ b/public/src/stylesheets/app/_overrides.scss
@@ -29,6 +29,15 @@
   width: 45%;
 }
 
+.pac-\!-grid-column-sticky-45 {
+  width: 45%;
+  padding: 10px 0;
+  position: sticky;
+  top: 20px;
+  overflow: auto;
+  position: sticky;
+}
+
 .pac-\!-grid-column--max-700 {
   max-width: 700px;
 }
