PIC-4093: Changes based on review

--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -58,7 +58,7 @@
 
   <form name="matchDefendant" id="matchDefendant" method="post">
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-half pac-!-grid-column-45 govuk-!-padding-right-9">
+      <div class="govuk-grid-column-one-half pac-!-grid-column-sticky-45 govuk-!-padding-right-9">
 
         <h3 class="govuk-heading-m">Defendant details</h3>
 
