--- a/public/src/stylesheets/app/_overrides.scss
+++ b/public/src/stylesheets/app/_overrides.scss
@@ -27,6 +27,10 @@
 
 .pac-\!-grid-column-45 {
   width: 45%;
+}
+
+.pac-\!-grid-column-sticky-45 {
+  width: 45%;
   padding: 10px 0;
   position: sticky;
   top: 20px;
